[package]
name = "epochs-yew"
version = "0.1.0"
authors = ["Tim Heaney <oylenshpeegul@gmail.com>"]
description = "A web interface to the epochs crate."
license = "MIT"
repository = "https://github.com/oylenshpeegul/epochs-yew"
readme = "README.org"
edition = "2018"

[dependencies]
chrono = "0.4"
epochs = "0.2"
stdweb = "0.4"
yew = "0.11"
